# arbitra-backend

./: .env  .env.development  .env.example  .env.security.example  .env.staging  .env.testing  .gitignore  ADAPTIVE_BEAR_STRATEGY.md  ADD_TRADE_PERSISTENCE.md  AUTOMATIC_DEPLOYMENTS_SETUP.md  BACKEND_SECURITY_TEST_RESULTS.md  BINANCE_HEDGE_MODE_FIX.md  BLOCKING_HTTP_FIX.md  BRANCHES_CREATED_SUMMARY.md  BRANCH_WORKFLOW_GUIDE.md  BREAKOUT_LONG_SHORT_GUIDE.md  BREAKOUT_SCANNER.md  COINBASE_WALLET_FIX.md  CRITICAL_BUG_FIX_MULTIPLE_POSITIONS.md  CRITICAL_FREEZING_FIX.md  DASHBOARD_SUMMARY.md  DATABASE_STORAGE_COMPLETE.md  DEFI_MONITORING_USER_GUIDE.md  DEFI_VAULT_MONITORING.md  DEPLOYMENT_SUMMARY.md  DIGITALOCEAN_DEPLOYMENT.md  Dockerfile  Dockerfile.backup  Dockerfile.railway  EARLY_MOVER_SIGNALS_SUMMARY.md  ENHANCED_SYMBOL_SELECTION.md  ENVIRONMENT_SEPARATION_COMPLETE.md  FINAL_DEPLOYMENT_STEPS.md  FUNDING_DIVERGENCE_SCANNER.md  GCP_DEPLOYMENT_GUIDE.md  INSTANT_DASHBOARD_FIX.md  LIVE_BALANCE_TRACKING.md  LIVE_DASHBOARD_POSITION_MANAGEMENT.md  LIVE_DASHBOARD_REALTIME_UPDATES.md  LIVE_TEST_MODE_SEPARATION.md  (+174 more)
.cache/: coingecko_cache.json
api/: index.py
data/: strategies.db
scripts/: check_hotcoins_kucoin.py  check_kucoin_books.py  check_kucoin_feeder.py  check_tickers_run.py  find_kucoin_pairs.py  kucoin_start_debug.py  manual_start_kucoin.py  post_test_entries.py  start_kucoin_local.py
tests/: __init__.py  test_arbitrage_core.py  test_mexc_proto_decode.py  test_quickscalp_backtest.py  test_scanner_vwap.py  test_smoke.py  test_strategy_executor.py
tools/: mexc_probe.py  (+65 more)
(+125 files in other folders)
