[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "arbitrage"
version = "0.1.0"
description = "Simple arbitrage scaffold"
authors = [ { name = "Your Name", email = "you@example.com" } ]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.pytest.ini_options]
minversion = "6.0"

